# api-everywhere

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml
playground/: .env  next.config.js  package.json
playground/components/: Footer.tsx  Head.tsx  Header.tsx  ParameterArea.tsx  ResponseArea.tsx
playground/pages/: index.tsx
src/: main.rs
src/config/: mod.rs
src/external_service/: mod.rs
src/external_service/spread_sheet/: cell.rs  header.rs  mod.rs  range.rs  restricted.rs  sheet.rs  token_manager.rs  value.rs
src/external_service/spread_sheet/api/: mod.rs  operation.rs
src/json_structure/: json_value_ref.rs  mod.rs
src/playground_html/: 404.html  index.html
src/playground_html/_next/static/CkYWfaIbpQNF00EGIEHJD/: _buildManifest.js
src/playground_html/_next/static/chunks/: 966-f89bcdc59b3fbdab.js
src/playground_html/_next/static/chunks/pages/: index-0b682d225e6f5fa6.js  index-e21423818d67d412.js
src/playground_html/_next/static/css/: 7f830642162e86f5.css
src/playground_html/_next/static/hTt0NEhO3rZQr3sj7bUYT/: _buildManifest.js
src/web/: mod.rs  spread_sheet_handler.rs  spread_sheet_meta.rs
